Imagen de fondo

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Michelle Nieto</title>
 </head>
-<body>
+<body background="img/cbum.jpg"
+style="background-repeat:no repeat;
+background-position: center;
+background-size: cover;"
+>
+
+
   
     <h1> H1 </h1>
     <h2> H2 </h2>
@@ -14,6 +21,12 @@
     <h4> H4 </h4>
     <h5> H5 </h5>
     <h6> H6 </h6>
-    <img src="GYM.avif" alt="GYM" width="50px" height="200px">
+    <img src="img/GYM.avif" alt="GYM" width="200px" height="200px">
+    <p>
+        El gym donde seras lo que tanto deseas 
+    </p>
+    <p>
+        Lo haras con los mejores entrenadores
+    </p>
 </body>
 </html>
