--- a/index.html
+++ b/index.html
@@ -7,26 +7,42 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Michelle Nieto</title>
 </head>
-<body background="img/cbum.jpg"
-style="background-repeat:no repeat;
-background-position: center;
-background-size: cover;"
->
+<body>
 
+    <div  class="inicio">
+    <h1> gymich</h1>
+    <img src="img/gym-dance.gif" alt="GYM" width="200px" height="200px">
+    </div>
 
-  
-    <h1> H1 </h1>
-    <h2> H2 </h2>
-    <h3> H3 </h3>
+<h2> El gym donde seras lo que tanto deseas </h2>
+    <h3> Lo haras con los mejores entrenadores </h3>
     <h4> H4 </h4>
     <h5> H5 </h5>
     <h6> H6 </h6>
-    <img src="img/GYM.avif" alt="GYM" width="200px" height="200px">
-    <p>
+   
+    <p class="primer-parrafo">
         El gym donde seras lo que tanto deseas 
     </p>
-    <p>
+    <p class="segundo-parrafo">
         Lo haras con los mejores entrenadores
     </p>
+
+<div class="galeria">
+<img src="img/descarga.jfif" alt="gym">
+<img src="img/gym2.webp" alt="gym">
+<img src="img/cbum.jpg" alt="gym">
+</div>
+<h2> Lista de gym
+<ul>
+   <li>gym</li>
+   <li>gym 2</li>
+   <li>gym 3</li>
+</ul>
+<h2> Lista de fisicoculturistas 
+    <ol>
+ <li> Ronnie Coleman</li>
+ <li> Chris Bumstead </li>
+
+    </ol>
 </body>
 </html>
