--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Las 7 Maravillas del Mundo Antiguo</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-primary-subtle">
+    <nav class="navbar navbar-expand-lg bg-danger-subtle">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,11 +47,11 @@
       </nav>
 
     <div  class="inicio">
-    <h1> Las 7 maravillas del mundo Antiguo</h1>
-    <img src="img/gym-dance.gif" alt="GYM" width="200px" height="200px">
+    <h1> Las 7 maravillas del mundo Antiguo </h1>
+    <img src="piramide de giza.jpg" alt="GYM" width="200px" height="200px">
     </div>
 
-<h2> El gym donde seras lo que tanto deseas </h2>
+<h2> -La piramide de guiza </h2>
     <h3> Lo haras con los mejores entrenadores </h3>
     <h4> H4 </h4>
     <h5> H5 </h5>
