--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#listaGym">Lista Gym</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
@@ -34,28 +34,46 @@
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
+              
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            
           </div>
         </div>
       </nav>
 
     <div  class="inicio">
     <h1> Las 7 maravillas del mundo Antiguo </h1>
-    <img src="piramide de giza.jpg" alt="GYM" width="200px" height="200px">
+    <img src="piramide de giza.jpg" alt="piramide" width="200px" height="200px">
     </div>
 
 <h2> -La piramide de guiza </h2>
-    <h3> Lo haras con los mejores entrenadores </h3>
-    <h4> H4 </h4>
-    <h5> H5 </h5>
-    <h6> H6 </h6>
+<p>
+  La Gran Pirámide de Guiza es, además de la mayor de las pirámides de Egipto, la más antigua de las siete maravillas del mundo antiguo y la única que todavía perdura. Fue ordenada a construir por el faraón Keops de la cuarta dinastía del Antiguo Egipto. 
+</p>
+<img src="img/piramidegiza.jpg" alt="piramide de guiza" width="300px" height="250px">
+
+<h2> -Faro de Alejandria  </h2>
+<p>
+  El Faro de Alejandría fue una torre construida en el siglo III a. C. durante la dinastía ptolemaica, en el reinado de Ptolomeo II en la isla de Faro en Alejandría, Egipto, para servir como punto de referencia del puerto y como faro, con una altura estimada de al menos 100 metros.
+</p>
+<img src="img/faro de alejandria.jfif" alt="faro de alejandria" width="300px" height="250px">
+    <h2> -Mausoleo en Halicarnaso </h2>
+    <p>
+      El regente Mausolus fue quien mandó construir (en 353 a. C.) en Halicarnaso (la actual Turquía) la que sería su propia sepultura, una estructura de mármol que mezclaba principios arquitectónicos griegos, egipcios y de Oriente Medio. A ella le debemos el término genérico de mausoleo.
+    </p>
+    <img src="img/mausoleo en halicarnaso.jpg" alt="Mausoleo en halicarnaso" width="300px" height="250px"> 
+    <h2> -Estatua Gigante de Zeus en Olimpia </h2>
+    <p>
+      No se sabe si esta estatua de oro y marfil de 12 metros de altura erigida en el Templo de Zeus fue destruida en el año 426 a. C. o en el posterior incendio de Constantinopla, ya que su trono era de madera. Pero seguro que durante el tiempo que permaneció en pie un pelín de envidia sí que les tuvo que dar a los atenienses.
+    </p>
+    <img src="img/estatua de zeus.jfif" alt="Estatua Gigante de Zeus en Olimpia" width="300px" height="300px">
+    <h2> -Templo de Artemisa en Efeso</h2>
+    <p>
+      En el año 550 a. C. el rey Creso quiso honrar a la diosa griega Artemisa con este templo construido en Éfeso (actual Turquía). Todavía hoy se pueden ver los cimientos y una sola columna del gigantesco edificio que fue destruido hasta en tres ocasiones.
+    </p>
+    <img src="img/templo de artemisa.jfif" alt="Templo de Artemisa en Efeso" width="300px" height="250px">
+    <h2>EL COLOSO DE RODAS</h2>
+    <p> </p>
    
     <p class="primer-parrafo">
         El gym donde seras lo que tanto deseas 
@@ -69,13 +87,13 @@
 <img src="img/gym2.webp" alt="gym">
 <img src="img/cbum.jpg" alt="gym">
 </div>
-<h2> Lista de gym
+<h2 id="listaGym"> Lista de gym </h2>
 <ul>
    <li>gym</li>
    <li>gym 2</li>
    <li>gym 3</li>
 </ul>
-<h2> Lista de fisicoculturistas 
+<h2> Lista de fisicoculturistas  </h2>
     <ol>
  <li> Ronnie Coleman</li>
  <li> Chris Bumstead </li>
